2009-03-27  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.25

2009-03-27  Gordon Williams  <gordon.williams@collabora.co.uk>

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c: Removed corruption
	workaround, as it causes problems with the new kernel (and there
	is no need for it now anyway)

2009-03-27  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.24

2009-03-26  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Fix crash of NB#104271

	* matchbox/core/mb-window-manager.c (mb_wm_handle_hang_client):
	Reference the client for the case that it is unreffed while we are in
	the hang client handler. When returning from the handler, check if the
	client was unreffed (unmapped) before trying shut it down.
	* matchbox/core/mb-wm-object.[ch] (mb_wm_object_get_refcount): New.

2009-03-26  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	* matchbox/core/mb-wm-main-context.c: apparently sometimes someone
	adds a null handler; protect against this.

2009-03-25  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	* matchbox/core/mb-wm-main-context.c: don't allow event handlers
	to stop processing of further events.  Give a warning if
	behaviour would have differed before this change.  This does not
	crash the system, so I'm not sure what the crasher yesterday was:
	I wonder whether it was caused by passing a function which still
	returned bool to some function which expected it to return void
	now.  Anyway, if Kimmo was right about the causes of that bug:
	Fixes NB#105014.

2009-03-25  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	* matchbox/core/mb-wm-main-context.c: slight fixup of warnings in
	loop processing for events.

2009-03-25  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	The next step from the reverted patch.  Crashes still not evident.

	* matchbox/core/mb-wm-main-context.c: unify loop processing for events.

2009-03-25  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	Step-by-step inclusion of reverted patch.
