@@ -4,7 +4,11 @@ include /usr/share/cdbs/1/class/autotools.mk
 
 DEB_CONFIGURE_EXTRA_FLAGS := --enable-png-theme --enable-composite-managers=clutter --enable-glib-main-loop --enable-libmatchbox --disable-simple-manager --with-pango
 
-CFLAGS := -DG_DEBUG_DISABLE
+ifeq (,$(findstring debug,$(DEB_BUILD_OPTIONS)))
+CFLAGS += -DG_DEBUG_DISABLE
+else
+CFLAGS += -O0
+endif
 
 DEB_DH_STRIP_ARGS := --dbg-package=libmatchbox2
 
