@@ -1,3 +1,15 @@
+2009-03-r0  Adam Endrodi  <adam.endrodi@blumsoft.eu>
+
+	* debian/rules:
+	  Recognize the "debug" DEB_BUILD_OPTIONS parameter
+	  to enable g_debug() and compile with -O0.
+	* matchbox/client-types/mb-wm-client-menu.c
+	* matchbox/core/mb-wm-client-window.c
+	* matchbox/core/mb-window-manager.c:
+	  Changed printf()s to g_log()s.
+	* matchbox/core/mb-wm-util.c:
+	  g_debug() trapped X errors.
+
 2009-03-27  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>
 
 	Release 0.2.25
